...
                    android:text="@string/attendee_name"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/attendeeName_Example1"
                    android:layout_width="131dp"
                    android:layout_height="25dp"
                    android:text="@string/attendee_name_example"
                    android:textColor="#272525" />

            </TableRow>
...
                    android:text="@string/attendee_remark"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/attendeeRemark_Example4"
                    android:layout_width="152dp"
                    android:layout_height="66dp"
                    android:text="@string/attendee_remark_Example"
                    android:textColor="#272525" />
            </TableRow>

...
